v1.0.1-1.21.5(Fixed firework uncrafting and added uncrafting for Tipped Arrows)